[gd_scene load_steps=3 format=3 uid="uid://dvxnbr5xiyvwu"]

[ext_resource type="Texture2D" uid="uid://du8j8v53e3tga" path="res://assets/objects/gun.png" id="1_ineen"]
[ext_resource type="Script" path="res://scripts/gun.gd" id="1_oi6ah"]

[node name="Gun" type="Node2D"]
script = ExtResource("1_oi6ah")

[node name="SpriteLeft" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(10, 97)
scale = Vector2(2, 2)
texture = ExtResource("1_ineen")
flip_h = true

[node name="MarkerLeft" type="Marker2D" parent="."]
texture_filter = 1
position = Vector2(-28, 93)
rotation = 3.14159
scale = Vector2(0.87931, 1)

[node name="SpriteRight" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(95, 97)
scale = Vector2(2, 2)
texture = ExtResource("1_ineen")

[node name="MarkerRight" type="Marker2D" parent="."]
texture_filter = 1
position = Vector2(131, 93)

[node name="shootSpeedTimer" type="Timer" parent="."]

[connection signal="timeout" from="shootSpeedTimer" to="." method="_on_shoot_speed_timer_timeout"]
